# filedistance

./: .gitignore  CMakeLists.txt  README.md
include/: apply.h  distance.h  endianness.h  list.h  list_namedistance.h  name_distance.h  safestr.h  script.h  search.h  util.h
include/safe_str/: strlcpy.h
src/: apply.c  distance.c  list.c  list_namedistance.c  main.c  name_distance.c  script.c  search.c  util.c
src/safe_str/: strlcpy.c
